--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <!-- Option 1: Include in HTML -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Interior Design & Decorating | John Smith Designs</title>
+    <title>My Portfolio-Website</title>
 </head>
 
 <body>
